--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 server:
   servlet:
     context-path: /photoAlbum
+
+spring:
+  datasource:
+    username: ${db.username}
+    password: ${db.password}
+    url: jdbc:mysql://localhost:3306/photoalbum
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
