Added upload feature [frontend]

--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -12,5 +12,10 @@ spring:
     hibernate:
       ddl-auto: none
 
+  servlet:
+    multipart:
+      max-file-size: 15MB
+      max-request-size: 15MB
+
 app:
   uploadDir: C:\\photoAlbum
