--- a/Frontend/photo-album/package.json
+++ b/Frontend/photo-album/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
