--- a/Frontend/photo-album/package.json
+++ b/Frontend/photo-album/package.json
@@ -13,7 +13,9 @@
     "react-scripts": "4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-foundation": "^0.9.6",
+    "bootstrap":"^4.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
